--- a/html/virus.html
+++ b/html/virus.html
@@ -2,6 +2,7 @@
 <html> 
     <head>
         <title>病毒库</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./css/main.css">
         <link rel="stylesheet" type="text/css" href="./css/index.css">
         <style>
